--- a/src/app/pages/new-attestation/new-attestation.component.html
+++ b/src/app/pages/new-attestation/new-attestation.component.html
@@ -1,7 +1,7 @@
 
 <mat-card >
   <div>
-  <mat-stepper  (click)="checktabs(stepper.selectedIndex)"  orientation="horizontal" #stepper>
+  <mat-stepper (click)="checktabs(stepper.selectedIndex)"  orientation="horizontal" [linear]="true" #stepper  >
     <mat-step [stepControl]="firstForm" [completed]="tabcheck1">
       <ng-template matStepLabel >1st Steps</ng-template> 
       <div class="card">
@@ -19,14 +19,14 @@
             </section>
             <section class="example-section">
               <span class="example-list-section">
-                <mat-checkbox class="example-margin" formControlName="instructionalDetails" [(ngModel)]="instructionalField" (change)="onChange($event)">
+                <mat-checkbox class="example-margin" formControlName="instructionalDetails" [(ngModel)]="instructionalDetails" (change)="onChange($event)">
                   Medium of Instruction (In case you want letter(language) of medium of instructions eg: English,Hindi etc)
                 </mat-checkbox>
               </span>
             </section>
             <section class="example-section">
               <span class="example-list-section">
-                <mat-checkbox class="example-margin" formControlName="curriculumDetails" [(ngModel)]="curriculum" (change)="onChange($event)">
+                <mat-checkbox class="example-margin" formControlName="curriculumDetails" [(ngModel)]="curriculumDetails" (change)="onChange($event)">
                   Curriculum (Incase you want the subjects to be attested. Curriculum is issued by the college)
                 </mat-checkbox>
               </span>
@@ -40,7 +40,7 @@
             </section>
             <section class="example-section">
               <span class="example-list-section">
-                <mat-checkbox class="example-margin" formControlName="affiliation" [(ngModel)]="affiliationletter" (change)="onChange($event)">
+                <mat-checkbox class="example-margin" formControlName="affiliation" [(ngModel)]="affiliation" (change)="onChange($event)">
                   Affiliation Letter
                 </mat-checkbox>
               </span>
@@ -101,10 +101,10 @@
       <button mat-button matStepperPrevious class="previous-custom-button" style="margin-right: 10px;">Back</button>
       <button mat-button matStepperNext class="next-custom-button">Next</button>
     </mat-step>
-    <mat-step>
+    <!-- <mat-step>
       <ng-template matStepLabel>4th Steps</ng-template>
       <button mat-button matStepperPrevious class="previous-custom-button">Back</button>
-    </mat-step> 
+    </mat-step>  -->
   </mat-stepper>
 </div>
 </mat-card>     
