--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,8 +1,9 @@
 <div class="bgimg">
+<img style="height: 100vh; width: 100vw; position: absolute; z-index: -1;" src="../../../assets/IMG/gf-01.jpg" alt="">
   <div class="bgb">
     <div class="mcr">
       <div class="row" style="padding: 20px;">
-        <h6 class="col-md-4">New User ? <a href="">Register</a></h6>
+        <h6 class="col-md-4">New User ? <a routerLink="/register">Register</a></h6>
         <div class="col-md-4" style="height: 150px; overflow: hidden;">
           <img style="height: 200px; width: 100%; margin-top: -20px;" src="../../../assets/IMG/UM Logo (632 × 505 px).svg" alt="">
         </div>
@@ -14,14 +15,23 @@
 
         <br>
         <h6 class="label">Email address:</h6>
-        <input type="email" class="form-control" id="userName" formControlName="userName" placeholder="Enter Username">
+        <input type="email" class="form-control" id="userName" formControlName="userName" placeholder="Enter Username"  [ngClass]="{'is-invalid': loginForm.get('userName')?.invalid && (loginForm.get('userName')?.dirty || loginForm.get('userName')?.touched)}">
         <label for="">Username is required Enter a valid email address</label><br>
+        <div
+        *ngIf="loginForm.get('userName')?.invalid && (loginForm.get('userName')?.dirty || loginForm.get('userName')?.touched)"
+        class="invalid-feedback">
+        Email must be a valid email address
+      </div><br>
         <h6 class="label">Password:</h6>
         <div style="position: relative; width: 100%;">
-          <input type="password" class="form-control" id="passWord" formControlName="passWord" placeholder="Enter Password">
+          <input type="password" class="form-control" id="passWord" [type]="showPassword ? 'text' : 'password'" formControlName="passWord" placeholder="Enter Password" [ngClass]="{'is-invalid': loginForm.get('passWord')?.invalid && (loginForm.get('passWord')?.dirty || loginForm.get('passWord')?.touched)}">
           <div class="eye">
-            <i class="fa fa-eye" aria-hidden="true"></i>
-            <i class="fa fa-eye-slash" aria-hidden="true"></i>
+              <i alt="show" class="far fa-eye eye-show" 
+              (click)="showPassword = !showPassword"
+              [class.hide]="showPassword"></i>
+              <i alt="hide" class="far fa-eye-slash eye-hide" 
+              (click)="showPassword = !showPassword"
+              [class.hide]="!showPassword"></i>
           </div>
         </div>
         <label for="">Password is required Password should have minimum 8 characters, at least 1 uppercase letter, 1
@@ -34,12 +44,14 @@
           <h6><a style="float: right; cursor: pointer" cFormCheckLabel for="checkOne" (click)="forgotPassword()">forgot
               password ?</a></h6>
         </div>
-        <button type="submit" (click)="onSubmit()">Login</button><br>
+        <button type="submit" [disabled]="!loginForm.valid" (click)="onSubmit()" style="font-weight: bold;
+        font-size: x-large;">Login</button><br>
         <app-loader *ngIf="loader"></app-loader>
       </div>
     </div>
   </div>
 </div>
+<router-outlet></router-outlet>
 
 <p-dialog header="Verify OTP" [(visible)]="visible" [style]="{width: '50vw'}">
   <div>
