--- a/src/app/auth/register/register.component.scss
+++ b/src/app/auth/register/register.component.scss
@@ -4,398 +4,363 @@
  * Licensed under the MIT License. See License.txt in the project root for license information.
  */
 
-$color1: #f4f4f4;
-$color2: #3197EE;
-
 .form::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
-
-input::-webkit-outer-spin-button,
-      input::-webkit-inner-spin-button {
-        display: none;
-      }
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .form {
-    -ms-overflow-style: none;
-    /* IE and Edge */
-    scrollbar-width: none;
-    /* Firefox */
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
 
-.about {
-    overflow: hidden;
-    position: relative;
+.mcr::-webkit-scrollbar {
+  display: none;
 }
 
-.aboutt {
-    position: absolute;
-    top: 25%;
-    right: 0;
-    left: 0;
-    z-index: 5;
+/* Hide scrollbar for IE, Edge and Firefox */
+.mcr {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+.bgimg {
+  height: 100vh;
+  width: 100vw;
+}
+
+.bgb {
+  background-color: #192b51a3;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
-.about .logo {
-    width: 350px;
-    height: 300px;
-    margin: 0 auto;
-}
 
-.about .logo img {
-    width: 350px;
-    height: 300px;
-}
-
-.about h4 {
-    position: absolute;
-    text-align: center;
-    z-index: 5;
-    left: 0;
-    right: 0;
-}
-
-.elip {
-    border-radius: 50%;
-    height: 80vw;
-    width: 80vw;
-    background-color: #266FEF;
-    position: absolute;
-    z-index: 1;
-    opacity: 0.2;
-    right: -85%;
-    top: -62%;
-}
-
-:host {
-    .title {
-        margin-bottom: 2rem;
-    }
+h4,
+h5 {
+  text-align: center;
 }
 
 .mcr {
-    position: relative;
-    overflow: hidden;
-    height: 90vh;
-    width: 90vw;
-    background-color: #bef4d0;
-    margin: 0 auto;
-    border-radius: 50px;
+  position: relative;
+  height: 80vh;
+  width: 60vw;
+  background-color: #ffffff;
+  margin: auto;
+  overflow-y: scroll;
+  padding: 3% 5%;
+  box-shadow: rgba(0, 0, 0, 0.944) 0px 25px 50px -12px;
 }
 
-.form {
+
+.form .label {
+  width: 100%;
+  text-align: left;
+}
+
+.eye {
+  position: absolute;
+  top: 25%;
+  right: 5%;
+}
+
+
+.number input[type=number] {
+  width: 100%;
+  height: 40px;
+  border-radius: 8px;
+  padding-left: 20%;
+}
+
+.number {
+  width: 100%;
+  position: relative;
+  border-radius: 8px;
+  border: none;
+  overflow: hidden;
+}
+
+.number select {
+  width: 17%;
+  background-color: #ffffff00;
+  position: absolute;
+  border: none;
+  top: 0;
+  bottom: 0;
+}
+
+.number select:focus {
+  outline: none;
+}
+
+label {
+  display: none;
+}
+
+.cf {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 3%;
+}
+
+.rem {
+  display: flex;
+  justify-content: center;
+}
+
+.rem h6 {
+  margin-top: auto;
+}
+
+button {
+  height: 40px;
+  width: 50%;
+  border: none;
+  border-radius: 8px;
+}
+
+@media (max-width: 600px) {
+  .mcr {
+    height: 100vh;
+    width: 100vw;
+    border-radius: 0;
+    margin-top: 0;
+    padding: 10px;
+  }
+
+  .bac {
+    display: none;
+  }
+
+  .form {
     height: 100%;
     overflow-y: scroll;
-    padding: 30px 60px;
+    padding: 10px 20px;
+  }
+
+  .about {
+    padding: 0;
+    height: 130px;
+    overflow: hidden;
+  }
+
+  .about .logo {
+    width: 150px;
+    height: 150px;
+    margin: 0 auto;
+  }
+
+  .about .logo img {
+    height: 150px;
+    width: 150px;
+  }
+
+  .form h5 {
+    text-align: center;
+  }
+
+  .register {
+    text-align: center;
+  }
 }
 
-input[type=email],
-[type=password],
-[type=text],
-[type=number] {
-    width: 100%;
-    height: 40px;
-    border-radius: 8px;
-    border: none;
-    padding-left: 3%;
+.OTP {
+  min-width: 30vw;
+  display: flex;
+  justify-content: space-around;
+}
+
+.OTP input {
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  border: none;
+  border-bottom: 2px solid #d2d2d2;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  padding: 0;
+}
+
+.OTP input:focus {
+  border-bottom: 2px solid deepskyblue;
+  outline: none;
 }
 
 @keyframes checked-radio-4 {
-    0% {
-        transform: rotate(0) translateY(-4.8vw) scale(.2);
-    }
+  0% {
+    transform: rotate(0) translateY(-4.8vw) scale(.2);
+  }
 
-    83% {
-        transform: rotate(360deg) translateY(-2.5vw) scale(1);
-        transform-origin: 2vw;
-    }
+  83% {
+    transform: rotate(360deg) translateY(-2.5vw) scale(1);
+    transform-origin: 2vw;
+  }
 
-    88% {
-        transform: translateY(.6vw) scale(1);
-    }
+  88% {
+    transform: translateY(.6vw) scale(1);
+  }
 
-    93% {
-        transform: translateY(-.9vw) scale(1);
-    }
+  93% {
+    transform: translateY(-.9vw) scale(1);
+  }
 
-    100% {
-        transform: translateY(0) scale(1);
-    }
+  100% {
+    transform: translateY(0) scale(1);
+  }
 }
 
 @keyframes unchecked-radio-4 {
-    25% {
-        top: -6.5vw;
-    }
+  25% {
+    top: -6.5vw;
+  }
 
-    50% {
-        top: 9vw;
-    }
+  50% {
+    top: 9vw;
+  }
 
-    75% {
-        top: -10vw;
-    }
+  75% {
+    top: -10vw;
+  }
 
-    100% {
-        top: -10vw;
-        transform: scale(0);
-    }
+  100% {
+    top: -10vw;
+    transform: scale(0);
+  }
 }
 
 .radio:before,
 .radio:after {
-    margin: auto;
+  margin: auto;
 }
 
 .radio,
 .radio:before,
 .radio:after {
-    position: relative;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+  position: relative;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 .radiobtn {
-    height: auto;
-    width: 100%;
-    position: relative;
-    animation: fade 1s;
-    display: flex;
-    align-items: center;
+  height: auto;
+  width: 100%;
+  position: relative;
+  animation: fade 1s;
+  display: flex;
+  align-items: center;
 }
 
 .radio {
-    display: inline-block;
-    width: 2.5vw;
-    height: 2.5vw;
-    border-radius: 50%;
-    transition: all .2s ease-in-out;
-    animation-timing-function: ease-in-out;
-    animation-iteration-count: infinite;
-    animation-duration: 1.6s;
-    animation-name: dot-anim;
+  display: inline-block;
+  width: 2.5vw;
+  height: 2.5vw;
+  border-radius: 50%;
+  transition: all .2s ease-in-out;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-duration: 1.6s;
+  animation-name: dot-anim;
 }
 
 .radio:checked+.radio {
-    animation-play-state: paused;
+  animation-play-state: paused;
 }
 
 .radio:before {
-    content: "";
-    position: absolute;
-    width: 1vw;
-    height: 1vw;
-    background: white;
-    border-radius: 50%;
-    box-shadow: rgba(0, 0, 0, 0.117647) 0 0 .8vw 0, rgba(0, 0, 0, 0.239216) 0 .8vw .8vw 0;
-    transition: all .2s;
+  content: "";
+  position: absolute;
+  width: 1vw;
+  height: 1vw;
+  background: white;
+  border-radius: 50%;
+  box-shadow: rgba(0, 0, 0, 0.117647) 0 0 .8vw 0, rgba(0, 0, 0, 0.239216) 0 .8vw .8vw 0;
+  transition: all .2s;
 }
 
 .radio:hover:before {
-    box-shadow: rgba(0, 0, 0, 0.0784314) 0 0 1vw 0, rgba(0, 0, 0, 0.239216) 0 1vw 1vw 0;
+  box-shadow: rgba(0, 0, 0, 0.0784314) 0 0 1vw 0, rgba(0, 0, 0, 0.239216) 0 1vw 1vw 0;
 }
 
 .radio:after {
-    content: "";
-    width: 2.5vw;
-    height: 2.5vw;
-    background: rgba(255, 255, 255, .5);
-    border-radius: 50%;
-    transform: scale(0);
+  content: "";
+  width: 2.5vw;
+  height: 2.5vw;
+  background: rgba(255, 255, 255, .5);
+  border-radius: 50%;
+  transform: scale(0);
 }
 
 .radio:checked+.radio:after {
-    background: transparent;
-    transition: all .5s;
-    transform: scale(1);
+  background: transparent;
+  transition: all .5s;
+  transform: scale(1);
 }
 
 .ra+.radio {
-    background: #34A853;
-    animation-delay: .6s;
+  background: #34A853;
+  animation-delay: .6s;
 }
 
 .ra+.radio:before {
-    animation: unchecked-radio-4 .5s both;
+  animation: unchecked-radio-4 .5s both;
 }
 
 .ra:checked+.radio:before {
-    animation-name: checked-radio-4;
-    animation-duration: .6s;
-    animation-timing-function: cubic-bezier(0.22, 0.61, 0.36, 1);
-    animation-fill-mode: both;
+  animation-name: checked-radio-4;
+  animation-duration: .6s;
+  animation-timing-function: cubic-bezier(0.22, 0.61, 0.36, 1);
+  animation-fill-mode: both;
 }
 
 [type="radio"] {
-    display: none;
+  display: none;
 }
 
 .lb {
-    margin: 0 20px 0 10px;
-}
-
-button {
-    height: 40px;
-    width: 60%;
-    border: none;
-    border-radius: 8px;
-}
-
-.eye {
-    position: absolute;
-    top: 25%;
-    right: 5%;
-}
-
-.number{
-    width: 100%;
-    display: flex;
-    border-radius: 8px;
-    border: none;
-    overflow: hidden;
-    background-color: #ffffff;
-}
-
-.number select{
-    width: 15%;
-    border: none;
+  margin: 0 20px 0 10px;
 }
 
 .Captcha {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
-.Captcha div{
-    width: 40%;
-    height: 40px;
-    border-radius: 8px;
-    border: none;
-    background-color: #f4f4f4;
+.Captcha div {
+  width: 40%;
+  height: 40px;
+  border-radius: 8px;
+  border: none;
+  background-color: #f4f4f4;
 }
 
-.Captcha [type=text] {
-    width: 40%;
-    height: 40px;
-    border-radius: 8px;
-    border: none;
-    padding-left: 3%;
-}
-
-.OTP{
-    min-width: 30vw;
-    display: flex;
-    justify-content: space-around;
-}
-
-.OTP input {
-    width: 50px;
-    height: 50px;
-    text-align: center;
-    border: none;
-    border-bottom: 2px solid #d2d2d2;
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
-    padding: 0;
-  }
-  
-  .OTP input:focus {
-    border-bottom: 2px solid deepskyblue;
-    outline: none;
-  }
-
-  input:focus {
-    
-    outline: none;
-  }
-
-  p-dialog .number{
-    border: 2px solid #d2d2d2;
-  }
-
-
-@media (min-width: 767px) {
-    .logo1 {
-        display: none;
-    }
-}
-
-@media (max-width: 767px) {
-    .mcr {
-        overflow-y: auto;
-        height: 100vh;
-        width: 100vw;
-        background-color: #bef4d0;
-        border-radius: 0;
-    }
-
-    .form {
-        height: 100%;
-        overflow-y: scroll;
-        padding: 10px 20px;
-    }
-
-    .logo1 {
-        width: 120px;
-        height: 120px;
-        margin: 0 auto;
-        display: flex;
-        justify-content: center;
-    }
-
-    .logo1 img {
-        width: 150px;
-        height: 150px;
-    }
-
-    .about {
-        display: none;
-    }
-}
-
-@media (min-width: 767px) {
-    .login1 {
-        display: none;
-    }
-}
-
-.login1 {
-    text-align: center;
-    margin-top: 20px;
-}
-
-:host {
-    .title {
-        margin-bottom: 2rem;
-    }
-
-    .gender {
-        width: 550px;
-        height: 50px;
-    }
-
-    .countrycode {
-        width: 100%;
-        height: 50px;
-
-
-    }
-
-    .eyeicon {
-        position: absolute;
-        cursor: pointer;
-        top: 30%;
-        right: 4%;
-    }
-}
-
-.Proceed {
-    pointer-events: none;
+.Captcha input[type=text] {
+  width: 40%;
+  height: 40px;
+  border-radius: 8px;
+  padding-left: 3%;
+  border: 1px black solid;
 }
