--- a/src/app/pages/activity-tracker/activity-tracker.component.html
+++ b/src/app/pages/activity-tracker/activity-tracker.component.html
@@ -1,25 +1,26 @@
 <p-card header="Activity Tracker">
     <div class="card">
-        <p-table [value]="trackerData" [tableStyle]="{'min-width': '50rem'}" [paginator]="true" [rows]="10"
-            [showCurrentPageReport]="true"
-            currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-            [rowsPerPageOptions]="[10, 25, 50]">
+        <p-table [value]="trackerData" [tableStyle]="{'min-width': '50rem'}">
             <ng-template pTemplate="caption">
                 <div class="row">
-                    <div class="col-md-8">
+                    <div class="col-md-6">
                         <div class="card flex flex-wrap justify-content-center">
                             <span class="p-input-icon-left">
                                 <i class="pi pi-search"></i>
                                 <input class="p-inputtext-lg" placeholder="Search" type="text" pInputText
-                                    [(ngModel)]="filterText" (input)="filterTable()" style="width: 100%;" />
+                                    [(ngModel)]="filterText" (input)="filterTable()" style="width: 100%;" #local />
                             </span>
                         </div>
                     </div>
+                    <div class="col-md-1 d-flex justify-content-end align-items-center">
+                        <button pButton label="Clear" class="p-button-outlined" icon="pi pi-filter-slash"
+                          (click)="clear()"></button>
+                      </div>
                 </div>
                 <br>
                 <div class="row">
                     <div class="col-md-12" style="display: flex; justify-content: flex-start; margin-right: auto;">
-                        <h2>Filtered tracker count : {{trackerLength}}</h2>
+                        <h2>Filtered tracker count : {{totalCount}}</h2>
                     </div>
                 </div>
             </ng-template>
@@ -42,11 +43,12 @@
                     <td>{{tracker.activity}}</td>
                     <td>{{tracker.data}}</td>
                     <td>{{tracker.application_id}}</td>
-                    <td>{{tracker.created_at}}</td>
-                    <td>{{tracker.updated_at}}</td>
+                    <td>{{tracker.created_at | date: 'dd/MM/yyyy'}}</td>
+                    <td>{{tracker.updated_at | date: 'dd/MM/yyyy'}}</td>
                     <td>{{tracker.location}}</td>
                 </tr>
             </ng-template>
         </p-table>
+        <p-paginator (onPageChange)="onPageChange($event)" [first]="first" [rows]="rows" [totalRecords]="totalCount" ></p-paginator>
     </div>
 </p-card>
