--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,136 +1,104 @@
 <div class="bgimg">
+    <img style="height: 100vh; width: 100vw; position: absolute; z-index: -1;" src="../../../assets/IMG/gf-01.jpg" alt="">
     <div class="bgb">
-        <form [formGroup]="registerForm">
-            <div class="mcr">
-                <div class="row">
-                    <h6 class="col-md-4">Already have an account ?<a routerLink="/login">Login</a></h6>
-                    <div class="col-md-4" style="height: 150px; overflow: hidden;">
-                        <img style="height: 200px; width: 100%; margin-top: -20px;"
-                            src="../../../assets/IMG/UM Logo (632 × 505 px).svg" alt="">
-                    </div>
-                    <h6 style="text-align: center;" class="col-md-4">English <img
-                            src="https://img.icons8.com/external-those-icons-fill-those-icons/15/external-down-arrows-those-icons-fill-those-icons-1.png"
-                            alt="external-down-arrows-those-icons-fill-those-icons-1" /></h6>
+        <div class="mcr">
+
+            <div class="row">
+                <h6 class="col-md-4">Already have an account ?<a routerLink="/login">Login</a></h6>
+                <div class="col-md-4" style="height: 150px; overflow: hidden;">
+                    <img style="height: 200px; width: 100%; margin-top: -20px;"
+                        src="../../../assets/IMG/UM Logo (632 × 505 px).svg" alt="">
                 </div>
-
-                <h1 style="text-align: center; color: DodgerBlue;">Register</h1>
-
-                <br>
-
-                <h6 for="input-name">Applicant First Name:</h6>
-                <input class="form-control" type="text" placeholder="First Name" formControlName="nameCtrl"
-                    [ngClass]="{'is-invalid': registerForm.get('nameCtrl')?.invalid && (registerForm.get('nameCtrl')?.dirty || registerForm.get('nameCtrl')?.touched)}">
-
-                <br>
-                <br>
-
-                <h6 for="input-name">Applicant Last Name:</h6>
-                <input class="form-control" type="text" placeholder="Last Name" formControlName="surnameCtrl"
-                    [ngClass]="{'is-invalid': registerForm.get('surnameCtrl')?.invalid && (registerForm.get('surnameCtrl')?.dirty || registerForm.get('surnameCtrl')?.touched)}">
-
-                <br>
-                <br>
-
-                <h6 for="input-name">Gender:</h6>
-
-                <div class="radiobtn">
-                    <input class="ra" value="Male" type="radio" id="radio-1" formControlName="genderCtrl" />
-                    <label class="radio" for="radio-1"></label>
-                    <h6 class="lb" for="radio-1">Male</h6>
-                    <input class="ra" value="Female" type="radio" id="radio-2" formControlName="genderCtrl" />
-                    <label class="radio" for="radio-2"></label>
-                    <h6 class="lb" for="radio-2">Female</h6>
-                    <input class="ra" value="Others" type="radio" id="radio-3" formControlName="genderCtrl" />
-                    <label class="radio" for="radio-3"></label>
-                    <h6 class="lb" for="radio-3">Others</h6>
-                </div>
-
-                <br>
-
-                <h6 for="input-email">Email Address:</h6>
-                <input class="form-control" type="email" placeholder="Email address" formControlName="emailCtrl"
-                    [ngClass]="{'is-invalid': registerForm.get('emailCtrl')?.invalid && (registerForm.get('emailCtrl')?.dirty || registerForm.get('emailCtrl')?.touched)}">
-
-                <br><br>
-
-                <h6 for="input-password">Password:</h6>
-                <div class="card flex justify-content-center">
-                    <p-password [toggleMask]="true" formControlName="passwordCtrl" [feedback]="false"
-                        placeholder="Type Password"
-                        [ngClass]="{ 'is-invalid': submitted && f['passwordCtrl'].errors }"></p-password>
-                </div>
-                <div *ngIf="(f['passwordCtrl'].invalid || f['passwordCtrl'].touched) && (f['passwordCtrl'].touched || submitted)"
-                    class="invalid-feedback">
-                    <div *ngIf="f['passwordCtrl'].invalid && f['passwordCtrl'].errors?.hasOwnProperty('required')">
-                        Password
-                        is required</div>
-                    <div *ngIf="f['passwordCtrl']?.errors?.hasOwnProperty('minlength')">Password must be at least 6
-                        characters</div>
-                </div>
-                <div *ngIf=" !submitted && f['passwordCtrl']?.errors?.hasOwnProperty('minlength')"
-                    style="font-size: 13px; color: #de5555;">Password must be at least 6 characters
-                </div>
-
-
-                <br>
-
-                <h6 for="input-re-password">Confirm Password:</h6>
-                <div class="card flex justify-content-center">
-                    <p-password formControlName="confmPasswordCtrl" [feedback]="false" placeholder="Re-Type Password"
-                        [ngClass]="{ 'is-invalid': submitted && f['confmPasswordCtrl'].errors }"
-                        [toggleMask]="true"></p-password>
-                </div>
-                <div *ngIf="submitted && f['confmPasswordCtrl'].errors" style="font-size: 13px; color: #de5555;">
-                    <div *ngIf="f['confmPasswordCtrl'].errors['required']">Confirm Password is required</div>
-                    <div *ngIf="f['confmPasswordCtrl'].errors['mustMatch']">Passwords doesn't match</div>
-                </div>
-                <div *ngIf="!submitted && f['confmPasswordCtrl'].errors" style="font-size: 13px; color: #de5555;">
-                    <div *ngIf="f['confmPasswordCtrl'].errors['mustMatch']">Passwords doesn't match</div>
-                </div>
-
-                <br>
-
-                <div style="display: flex;justify-content: space-between;">
-                    <h6 for="inputMobile">Country Code and Mobile number <span style="color:red;">*</span></h6>
-                    <div style="display: flex;">
-                        <input type="checkbox" (change)="onChange($event.returnValue)">
-                        <h6 for="" style="margin-left: 10px;">Same as WhatsApp No?</h6>
-                    </div>
-                </div>
-
-                <div class="number">
-                    <select id="country" name="country" formControlName="countryCtrl">
-                        <option *ngFor="let country of countriesList" value="{{country.phonecode}}">{{country.name}}
-                        </option>
-                    </select>
-                    <input type="number" formControlName="mobileNoCtrl"
-                        [ngClass]="{'is-invalid': registerForm.get('mobileNoCtrl')?.invalid && (registerForm.get('mobileNoCtrl')?.dirty || registerForm.get('mobileNoCtrl')?.touched)}">
-                </div>
-
-                <br><br>
-
-                <div class="Captcha">
-                    <div>
-                        <img src="captchaImageUrl" alt="CAPTCHA Image" />
-                    </div>
-                    <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/60/refresh--v1.png"
-                        alt="refresh--v1" />
-                    <input type="text" formControlName="captchaCtrl"
-                        [ngClass]="{'is-invalid': registerForm.get('captchaCtrl')?.invalid && (registerForm.get('captchaCtrl')?.dirty || registerForm.get('captchaCtrl')?.touched)}">
-                </div>
-                <br>
-
-                <div style="width: 100%; display: flex; justify-content: center;">
-                    <button (click)="Register()">Proceed</button>
-                </div>
-
+                <h6 style="text-align: center;" class="col-md-4">English <img
+                        src="https://img.icons8.com/external-those-icons-fill-those-icons/15/external-down-arrows-those-icons-fill-those-icons-1.png"
+                        alt="external-down-arrows-those-icons-fill-those-icons-1" /></h6>
             </div>
-        </form>
+            <h1 style="text-align: center; color: DodgerBlue;">Register</h1>
+            <br>
+            <div style="display: flex; width: 100%; justify-content: space-between;">
+                <div style="width: 45%;">
+                    <h6 for="input-name">Applicant First Name:</h6>
+                    <input class="form-control" type="text" placeholder="First Name">
+                </div>
+                <div style="width: 45%;">
+                    <h6 for="input-name">Applicant Last Name:</h6>
+                    <input class="form-control" type="text" placeholder="Last Name">
+                </div>
+            </div>
+            <br>
+            <h6 for="input-name">Gender:</h6>
+            <div class="radiobtn">
+                <input class="ra" value="Male" type="radio" id="radio-1" name="group" />
+                <label class="radio" for="radio-1"></label>
+                <h6 class="lb" for="radio-1">Male</h6>
+                <input class="ra" value="Female" type="radio" id="radio-2" name="group" />
+                <label class="radio" for="radio-2"></label>
+                <h6 class="lb" for="radio-2">Female</h6>
+                <input class="ra" value="Others" type="radio" id="radio-3" name="group" />
+                <label class="radio" for="radio-3"></label>
+                <h6 class="lb" for="radio-3">Others</h6>
+            </div>
+            <br>
+            <h6 for="input-email">Email Address:</h6>
+            <input class="form-control" type="email" placeholder="Email address">
+            <br>
+            <div style="display: flex; width: 100%; justify-content: space-between;">
+                <div style="width: 45%;">
+                    <h6 for="input-password">Password:</h6>
+                    <div style="position: relative; width: 100%;">
+                        <input class="form-control" type="password" placeholder="Enter Password">
+                        <div class="eye">
+                            <i class="fa fa-eye" aria-hidden="true"></i>
+                            <i class="fa fa-eye-slash" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </div>
+                <div style="width: 45%;">
+                    <h6 for="input-re-password">Confirm Password:</h6>
+                    <div style="position: relative; width: 100%;">
+                        <input class="form-control" type="password" placeholder="Enter Password">
+                        <div class="eye">
+                            <i class="fa fa-eye" aria-hidden="true"></i>
+                            <i class="fa fa-eye-slash" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <div style="display: flex;justify-content: space-between;">
+                <h6 for="inputMobile">Country Code and Mobile number <span style="color:red;">*</span></h6>
+                <div style="display: flex;">
+                    <input type="checkbox">
+                    <h6 for="" style="margin-left: 10px;">Same as WhatsApp No?</h6>
+                </div>
+            </div>
+            <div class="number">
+                <select id="country" name="country">
+                    <option>select country</option>
+                    <option value="AF">Afghanistan</option>
+                    <option value="AX">Aland Islands</option>
+                    <option value="AL">Albania</option>
+                    <option value="DZ">Algeria</option>
+                    <option value="AS">American Samoa</option><i class="fa fa-eye"></i>
+                    <option value="IN">India</option>
+                </select>
+                <input type="number">
+            </div>
+            <br><br>
+            <div class="Captcha">
+                <div></div>
+                <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/60/refresh--v1.png"
+                    alt="refresh--v1" />
+                <input type="text">
+            </div>
+            <br>
+            <div style="width: 100%; display: flex;justify-content: center;">
+                <button (click)="Register()">Proceed</button>
+            </div>
+        </div>
     </div>
 </div>
 <router-outlet></router-outlet>
-
-
 <p-dialog [(visible)]="displayNo1" [modal]="true" [responsive]="true">
     <p-header>
         <h2>Verify OTP</h2>
@@ -153,7 +121,6 @@
         </div>
     </div>
 </p-dialog>
-
 <p-dialog [(visible)]="displayNo2" [modal]="true" [responsive]="true">
     <p-header>
         <h2>Verify OTP</h2>
@@ -174,7 +141,6 @@
             <input type="number">
         </div>
         <br>
-
         <div style="display: flex; justify-content: center;">
             <button (click)="Register()">Proceed</button>
         </div>
